syntax = "proto3";

package brz;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "domain.proto";

option go_package = "github.com/autumnterror/breezynotes;brzrpc";

// ===== Requests =====
message ChangeBlockOrderRequest {
  string id = 1;
  int32 old_order = 2;
  int32 new_order = 3;
}
message ChangeTypeBlockRequest {
  string id = 1;
  string new_type = 2;
}
message OpBlockRequest {
  string id = 1;
  string op = 2;
  google.protobuf.Struct data = 3;
}

message ChangeTitleNoteRequest {
  string id = 1;
  string title = 2;
}

message UpdateTagTitleRequest {
  string id = 1;
  string title = 2;
}
message UpdateTagColorRequest {
  string id = 1;
  string color = 2;
}
message UpdateTagEmojiRequest {
  string id = 1;
  string emoji = 2;
}

message UpdateNoteTitleRequest {
  string id = 1;
  string title = 2;
}

message ShareNoteRequest {
  string note_id = 1;
  string login_to_share = 2;
  Roles role = 3;
}

message ChangeUserRoleRequest {
  string login = 1;
  Roles new_role = 2;
}

message CreateBlockRequest {
  string type = 1;
  string noteId = 2;
  int32 pos = 3;
  google.protobuf.Struct data = 4;
}


// ===== BlockNote Service =====
service BlockNoteService {
  rpc DeleteBlock(NoteBlockId) returns (google.protobuf.Empty);
  rpc CreateBlock(CreateBlockRequest) returns (Id);
  rpc OpBlock(OpBlockRequest) returns (google.protobuf.Empty);
  rpc GetBlock(BlockId) returns (Block);
  rpc GetBlockAsFirst(BlockId) returns (StringResponse);
  rpc ChangeBlockOrder(ChangeBlockOrderRequest) returns (google.protobuf.Empty);
  rpc ChangeTypeBlock(ChangeTypeBlockRequest) returns (google.protobuf.Empty);

  rpc CleanTrash(UserId) returns (google.protobuf.Empty);
  rpc ChangeTitleNote(ChangeTitleNoteRequest) returns (google.protobuf.Empty);
  rpc NoteToTrash(NoteId) returns (google.protobuf.Empty);
  rpc NoteFromTrash(NoteId) returns (google.protobuf.Empty);

  rpc GetNote(NoteId) returns (Note);
  rpc CreateNote(Note) returns (google.protobuf.Empty);
  rpc UpdateNoteTitle(UpdateNoteTitleRequest) returns (google.protobuf.Empty);

  rpc GetAllBlocksInNote(Strings) returns (Blocks);
  rpc GetAllNotes(UserId) returns (NoteParts);
  rpc GetNotesByTag(UserTagId) returns (NoteParts);
  rpc GetNotesFromTrash(UserId) returns (NoteParts);

  rpc AddTagToNote(NoteTagId) returns (google.protobuf.Empty);
  rpc RemoveTagFromNote(NoteTagId) returns (google.protobuf.Empty);
  rpc CreateTag(Tag) returns (google.protobuf.Empty);
  rpc GetTagsByUser(UserId) returns (Tags);
  rpc GetTag(TagId) returns (Tag);
  rpc UpdateTagTitle(UpdateTagTitleRequest) returns (google.protobuf.Empty);
  rpc UpdateTagColor(UpdateTagColorRequest) returns (google.protobuf.Empty);
  rpc UpdateTagEmoji(UpdateTagEmojiRequest) returns (google.protobuf.Empty);
  rpc DeleteTag(TagId) returns (google.protobuf.Empty);

  rpc ShareNote(ShareNoteRequest) returns (google.protobuf.Empty);
  rpc ChangeUserRole(ChangeUserRoleRequest) returns (google.protobuf.Empty);

  rpc Healthz(google.protobuf.Empty) returns (google.protobuf.Empty);
}
